--- a/index.html
+++ b/index.html
@@ -3,273 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zizi食谱 - 全功能稳定版</title>
+    <title>zizi食谱 - 旗舰版</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    
     <style>
         .hidden { display: none !important; }
-        .recipe-card { position: relative; display: flex; gap: 16px; background: white; padding: 20px; border-radius: 20px; box-shadow: 0 4px 6px -1px rgba(0,0,0,0.05); margin-bottom: 16px; border: 1px solid #f3f4f6; cursor: pointer; }
-        .recipe-thumb { width: 100px; height: 100px; border-radius: 12px; object-fit: cover; flex-shrink: 0; }
-        /* 删除按钮通用样式 */
-        .delete-btn { position: absolute; top: 10px; right: 10px; background: rgba(255,255,255,0.9); width: 28px; height: 28px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 14px; color: #ff4d4f; border: 1px solid #eee; z-index: 20; transition: all 0.2s; }
+        
+        /* 1. 全局滚动条美化 */
+        ::-webkit-scrollbar { width: 6px; }
+        ::-webkit-scrollbar-thumb { background: #10b981; border-radius: 10px; }
+
+        /* 2. 菜谱卡片高级感 */
+        .recipe-card { 
+            position: relative; display: flex; gap: 16px; background: rgba(255,255,255,0.8); 
+            backdrop-filter: blur(10px); padding: 20px; border-radius: 24px; 
+            box-shadow: 0 10px 25px -5px rgba(0,0,0,0.05); margin-bottom: 16px; 
+            border: 1px solid rgba(255,255,255,0.5); cursor: pointer;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        .recipe-card:hover { transform: translateY(-5px); box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1); }
+        .recipe-thumb { width: 100px; height: 100px; border-radius: 16px; object-fit: cover; flex-shrink: 0; }
+
+        /* 3. 删除按钮 */
+        .delete-btn { 
+            position: absolute; top: 12px; right: 12px; background: rgba(255,255,255,0.9); 
+            width: 30px; height: 30px; border-radius: 50%; display: flex; 
+            align-items: center; justify-content: center; font-size: 14px; 
+            color: #ff4d4f; border: 1px solid #eee; z-index: 20;
+        }
         .delete-btn:hover { background: #ff4d4f; color: white; transform: scale(1.1); }
-        input, textarea, select { width: 100%; padding: 12px; border: 1px solid #e5e7eb; border-radius: 12px; margin-bottom: 12px; outline: none; background: #f9fafb; }
-        .modal-overlay { background: rgba(0,0,0,0.6); backdrop-filter: blur(4px); }
-        /* 让滚动条变得优雅 */
-::-webkit-scrollbar { width: 5px; }
-::-webkit-scrollbar-thumb { background: #10b981; border-radius: 10px; }
 
-/* 卡片悬浮动画 */
-.recipe-card {
-    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.recipe-card:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-}
+        /* 4. 输入框美化 */
+        input, textarea, select { width: 100%; padding: 14px; border: 1px solid #eef2f6; border-radius: 16px; margin-bottom: 12px; outline: none; background: #f8fafc; transition: all 0.2s; }
+        input:focus, textarea:focus { border-color: #10b981; background: white; box-shadow: 0 0 0 4px rgba(16,185,129,0.1); }
 
-/* 按钮点击特效 */
-.nav-btn-active {
-    position: relative;
-    color: #10b981;
-}
-.nav-btn-active::after {
-    content: '';
-    position: absolute;
-    bottom: -8px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 4px;
-    height: 4px;
-    background: #10b981;
-    border-radius: 50%;
-}
+        /* 5. 弹窗覆盖层 */
+        .modal-overlay { background: rgba(15, 23, 42, 0.6); backdrop-filter: blur(6px); }
     </style>
 </head>
-<body class="bg-[#fafafa] min-h-screen pb-24 text-gray-900">
 
-    <header class="sticky top-0 z-30 bg-white/80 backdrop-blur-md border-b px-6 py-4 flex justify-between items-center">
-        <h1 class="text-xl font-black text-emerald-600">🥘 zizi食谱</h1>
-        <button id="header-auth-btn" class="text-xs font-bold bg-emerald-600 text-white px-4 py-2 rounded-full shadow-md">同步中...</button>
+<body class="bg-[#fcfcfc] min-h-screen pb-24 text-slate-800">
+
+    <div class="fixed top-0 left-0 w-full h-full -z-10 overflow-hidden pointer-events-none">
+        <div class="absolute top-[-10%] left-[-10%] w-[50%] h-[50%] bg-emerald-100/40 rounded-full blur-[120px]"></div>
+        <div class="absolute bottom-[-10%] right-[-10%] w-[50%] h-[50%] bg-orange-100/40 rounded-full blur-[120px]"></div>
+    </div>
+
+    <header class="sticky top-0 z-30 bg-white/70 backdrop-blur-md border-b border-slate-100 px-6 py-4 flex justify-between items-center">
+        <div class="flex items-center gap-2">
+            <span class="text-2xl">🥘</span>
+            <h1 class="text-xl font-black bg-gradient-to-r from-emerald-600 to-teal-500 bg-clip-text text-transparent">zizi食谱</h1>
+        </div>
+        <button id="header-auth-btn" class="text-xs font-bold bg-slate-800 text-white px-5 py-2.5 rounded-full shadow-lg hover:bg-emerald-600 transition-all">同步状态...</button>
     </header>
 
     <main id="view-home" class="p-6 max-w-2xl mx-auto">
-        <h2 class="text-2xl font-black mb-6">推荐菜谱</h2>
+        <h2 class="text-2xl font-black mb-6 flex items-center gap-2">今日推荐 <span class="text-sm font-normal text-slate-400">Recipes</span></h2>
         <div id="recipe-list" class="space-y-4"></div>
     </main>
 
     <main id="view-moment" class="p-4 max-w-2xl mx-auto hidden">
-        <h2 class="text-2xl font-black mb-6">美食瞬间</h2>
-        <div id="moment-grid" class="grid grid-cols-2 gap-3"></div>
+        <h2 class="text-2xl font-black mb-6 text-center">美食瞬间</h2>
+        <div id="moment-grid" class="grid grid-cols-2 gap-4"></div>
     </main>
 
     <main id="view-profile" class="p-6 max-w-xl mx-auto hidden">
-        <div class="bg-white rounded-3xl p-8 text-center shadow-xl border border-gray-100">
-            <div class="w-20 h-20 bg-emerald-50 text-emerald-600 rounded-full flex items-center justify-center text-3xl mx-auto mb-4 font-bold" id="p-avatar">👤</div>
-            <h2 class="text-xl font-black mb-1" id="p-name">游客厨师</h2>
-            <p class="text-gray-400 text-sm mb-6" id="p-email">登录后开启美食之旅</p>
-            <button id="p-action-btn" class="w-full py-4 bg-emerald-600 text-white rounded-2xl font-bold shadow-lg">登录/注册</button>
-        </div>
-    </main>
-
-    <nav class="fixed bottom-0 left-0 right-0 bg-white border-t p-4 flex justify-around items-center z-40 shadow-2xl">
-        <button id="nav-home" class="text-2xl active:scale-90 transition-transform">🏠</button>
-        <button id="nav-moment" class="text-2xl active:scale-90 transition-transform">📸</button>
-        <button id="nav-post" class="bg-emerald-500 text-white w-14 h-14 rounded-2xl flex items-center justify-center shadow-lg -mt-10 border-4 border-white active:scale-90 transition-transform">
-            <span class="text-3xl font-bold">+</span>
-        </button>
-        <button id="nav-profile" class="text-2xl active:scale-90 transition-transform">👤</button>
-    </nav>
-
-    <div id="modal-auth" class="fixed inset-0 modal-overlay hidden z-50 flex items-center justify-center p-6 text-sm">
-        <div class="bg-white w-full max-w-sm rounded-3xl p-8 shadow-2xl">
-            <h2 id="auth-title" class="text-2xl font-black mb-6 text-center">欢迎回来</h2>
-            <input id="auth-user" type="text" placeholder="你的名字">
-            <input id="auth-pwd" type="password" placeholder="密码 (至少6位)">
-            <button id="auth-submit" class="w-full py-4 bg-emerald-600 text-white rounded-2xl font-black">确认</button>
-            <button id="auth-toggle" class="w-full mt-4 text-xs text-gray-400 underline text-center block">切换登录/注册</button>
-            <button onclick="hideModal('modal-auth')" class="w-full mt-4 text-xs text-gray-300">取消</button>
-        </div>
-    </div>
-
-    <div id="modal-post" class="fixed inset-0 modal-overlay hidden z-50 flex items-center justify-center p-6 text-sm">
-        <div class="bg-white w-full max-w-md rounded-3xl p-8 shadow-2xl">
-            <h2 class="text-xl font-black mb-6 text-emerald-600">分享美食</h2>
-            <select id="post-type">
-                <option value="recipe">🥘 发布到菜谱区</option>
-                <option value="moment">📸 发布到瞬间区</option>
-            </select>
-            <input id="post-title" type="text" placeholder="标题">
-            <textarea id="post-notes" placeholder="心情或步骤..." class="h-32 resize-none"></textarea>
-            <input id="post-file" type="file" accept="image/*">
-            <div class="flex gap-4 mt-2">
-                <button onclick="hideModal('modal-post')" class="flex-1 py-4 text-gray-400 font-bold">取消</button>
-                <button id="post-submit" class="flex-1 py-4 bg-emerald-600 text-white rounded-2xl font-black">发布</button>
-            </div>
-        </div>
-    </div>
-
-    <div id="modal-detail" class="fixed inset-0 modal-overlay hidden z-50 flex items-center justify-center p-4">
-        <div class="bg-white w-full max-w-md rounded-3xl overflow-hidden shadow-2xl max-h-[90vh] flex flex-col">
-            <img id="detail-img" class="w-full aspect-video object-cover bg-gray-100">
-            <div class="p-8 overflow-y-auto">
-                <h2 id="detail-title" class="text-2xl font-black mb-2"></h2>
-                <p id="detail-author" class="text-xs text-emerald-600 mb-4 font-bold"></p>
-                <div id="detail-notes" class="text-gray-500 leading-relaxed text-sm whitespace-pre-wrap border-t pt-4"></div>
-                <button onclick="hideModal('modal-detail')" class="w-full mt-8 py-4 bg-gray-50 text-gray-400 rounded-2xl font-bold">关闭窗口</button>
-            </div>
-        </div>
-    </div>
-
-    <script>
-        // 1. 初始化配置
-        const CONF = {
-            url: "https://kmsbrisiajtykflnskpj.supabase.co",
-            key: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imttc2JyaXNpYWp0eWtmbG5za3BqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzIwODM2NzIsImV4cCI6MjA4NzY1OTY3Mn0.e8-qaJpmrGVc_GcWVEBHEUHWWiJ40Ax5BMyWTZsGqbE"
-        };
-        const _client = supabase.createClient(CONF.url, CONF.key);
-        let currentUser = null, isSignUp = false, allData = [];
-
-        // 2. 状态监听
-        _client.auth.onAuthStateChange((_, session) => {
-            currentUser = session?.user || null;
-            updateUI();
-            fetchData();
-        });
-
-        // 3. 数据拉取
-        async function fetchData() {
-            const { data, error } = await _client.from('recipes').select('*').order('created_at', { ascending: false });
-            if (error) return;
-            allData = data || [];
-            renderContent();
-        }
-
-        // 4. 内容渲染（重点：主页显示个人发布，瞬间区增加删除）
-        function renderContent() {
-            // 渲染主页菜谱
-            const recipes = allData.filter(i => !i.type || i.type === 'recipe');
-            document.getElementById('recipe-list').innerHTML = recipes.map(i => `
-                <div class="recipe-card" onclick="showDetail('${i.id}')">
-                    ${(currentUser && i.created_by === currentUser.id) ? `<div class="delete-btn" onclick="handleDelete(event, '${i.id}')">🗑️</div>` : ''}
-                    <div class="flex-1 min-w-0">
-                        <h3 class="font-black text-lg mb-1 truncate">${i.title}</h3>
-                        <p class="text-xs text-gray-400 line-clamp-2">${i.notes || '美味记录...'}</p>
-                        <p class="text-[10px] text-emerald-500 mt-2 font-bold uppercase">BY @${i.author || '匿名'}</p>
-                    </div>
-                    <img src="${i.image_url}" class="recipe-thumb">
-                </div>
-            `).join('') || '<div class="text-center py-20 text-gray-300 italic">暂无菜谱</div>';
-
-            // 渲染瞬间区
-            const moments = allData.filter(i => i.type === 'moment');
-            document.getElementById('moment-grid').innerHTML = moments.map(i => `
-                <div class="relative rounded-2xl overflow-hidden aspect-[3/4] bg-gray-100 shadow-sm" onclick="showDetail('${i.id}')">
-                    ${(currentUser && i.created_by === currentUser.id) ? `<div class="delete-btn" onclick="handleDelete(event, '${i.id}')">🗑️</div>` : ''}
-                    <img src="${i.image_url}" class="w-full h-full object-cover">
-                </div>
-            `).join('') || '<div class="col-span-2 text-center py-20 text-gray-300 italic">暂无瞬间</div>';
-        }
-
-        // 5. 删除逻辑
-        async function handleDelete(e, id) {
-            e.stopPropagation();
-            if (!confirm("确定要删除这条美食记录吗？")) return;
-            try {
-                const { error } = await _client.from('recipes').delete().eq('id', id);
-                if (error) throw error;
-                fetchData();
-            } catch (err) { alert("删除失败: " + err.message); }
-        }
-
-        // 6. 发布逻辑
-        async function handlePost() {
-            const t = document.getElementById('post-title').value.trim();
-            const f = document.getElementById('post-file').files[0];
-            const type = document.getElementById('post-type').value;
-            const n = document.getElementById('post-notes').value.trim();
-
-            if (!t || !f) return alert("标题和图片是必填的哦");
-            const btn = document.getElementById('post-submit');
-            btn.innerText = "上传中..."; btn.disabled = true;
-
-            try {
-                const ext = f.name.split('.').pop();
-                const path = `public/${Date.now()}_${Math.random().toString(36).slice(-4)}.${ext}`;
-                const { error: upErr } = await _client.storage.from('recipe-images').upload(path, f);
-                if (upErr) throw upErr;
-
-                const { data: urlObj } = _client.storage.from('recipe-images').getPublicUrl(path);
-                const { error: dbErr } = await _client.from('recipes').insert([{
-                    title: t, notes: n, type: type,
-                    image_url: urlObj.publicUrl,
-                    author: currentUser.email.split('@')[0],
-                    created_by: currentUser.id
-                }]);
-                if (dbErr) throw dbErr;
-
-                hideModal('modal-post');
-                fetchData();
-            } catch (e) { alert("发布失败: " + e.message); }
-            finally { btn.innerText = "发布"; btn.disabled = false; }
-        }
-
-        // 7. 登录逻辑
-        async function handleAuth() {
-            const u = document.getElementById('auth-user').value.trim();
-            const p = document.getElementById('auth-pwd').value.trim();
-            if (!u || p.length < 6) return alert("名字必填，密码至少6位");
-            const email = `${encodeURIComponent(u)}@rose.com`;
-            try {
-                const { error } = isSignUp ? await _client.auth.signUp({ email, password: p }) : await _client.auth.signInWithPassword({ email, password: p });
-                if (error) throw error;
-                hideModal('modal-auth');
-            } catch (e) { alert("验证失败: " + e.message); }
-        }
-
-        // 详情展示
-        window.showDetail = (id) => {
-            const item = allData.find(i => i.id == id);
-            if (!item) return;
-            document.getElementById('detail-img').src = item.image_url;
-            document.getElementById('detail-title').innerText = item.title;
-            document.getElementById('detail-notes').innerText = item.notes || '美味尽在不言中';
-            document.getElementById('detail-author').innerText = 'BY @' + (item.author || '匿名作者');
-            showModal('modal-detail');
-        };
-
-        // UI 辅助
-        function updateUI() {
-            const hBtn = document.getElementById('header-auth-btn');
-            const pName = document.getElementById('p-name'), pEmail = document.getElementById('p-email'), pBtn = document.getElementById('p-action-btn'), pAvatar = document.getElementById('p-avatar');
-            if (currentUser) {
-                const name = currentUser.email.split('@')[0];
-                hBtn.innerText = `退出 (${name})`; hBtn.onclick = () => _client.auth.signOut();
-                pName.innerText = name; pEmail.innerText = currentUser.email; pBtn.innerText = "退出当前账号";
-                pBtn.onclick = () => _client.auth.signOut(); pAvatar.innerText = name[0].toUpperCase();
-            } else {
-                hBtn.innerText = "登录/注册"; hBtn.onclick = () => showModal('modal-auth');
-                pName.innerText = "游客厨师"; pEmail.innerText = "登录后分享美食"; pBtn.innerText = "去登录 / 注册";
-                pBtn.onclick = () => showModal('modal-auth'); pAvatar.innerText = "👤";
-            }
-        }
-
-        function switchView(v) { ['view-home', 'view-moment', 'view-profile'].forEach(id => document.getElementById(id).classList.toggle('hidden', id !== `view-${v}`)); }
-        function showModal(id) { document.getElementById(id).classList.remove('hidden'); }
-        function hideModal(id) { document.getElementById(id).classList.add('hidden'); }
-
-        // 事件绑定
-        document.getElementById('nav-home').onclick = () => switchView('home');
-        document.getElementById('nav-moment').onclick = () => switchView('moment');
-        document.getElementById('nav-profile').onclick = () => switchView('profile');
-        document.getElementById('nav-post').onclick = () => currentUser ? showModal('modal-post') : showModal('modal-auth');
-        document.getElementById('auth-submit').onclick = handleAuth;
-        document.getElementById('post-submit').onclick = handlePost;
-        document.getElementById('auth-toggle').onclick = () => {
-            isSignUp = !isSignUp;
-            document.getElementById('auth-title').innerText = isSignUp ? "新厨师注册" : "欢迎回来";
-        };
-    </script>
-</body>
-</html>
-
+        <div class="bg-white/80 backdrop-blur-xl rounded-[32px] p-10 text-center shadow-2xl border border-white">
+            <div class="w-24 h-24 bg-gradient-to-br from-emerald-400 to-teal-600 text-white rounded-full flex items-center justify-center text-4xl mx-auto mb-6 font-bold shadow-inner" id="p-avatar">👤</div>
+            <h2 class="text-2xl font-black mb-2 text-slate-800" id="p-name">游客厨师</h2>
+            <p class="text-slate-400 text-sm mb-8" id="p-email">登录后开启您的私人厨房</p>
+            <button id="p-action-btn" class="w-full py-4 bg-emerald-600 text-white rounded-2xl font-black
