--- a/index.html
+++ b/index.html
@@ -73,4 +73,216 @@
             <div class="w-24 h-24 bg-gradient-to-br from-emerald-400 to-teal-600 text-white rounded-full flex items-center justify-center text-4xl mx-auto mb-6 font-bold shadow-inner" id="p-avatar">👤</div>
             <h2 class="text-2xl font-black mb-2 text-slate-800" id="p-name">游客厨师</h2>
             <p class="text-slate-400 text-sm mb-8" id="p-email">登录后开启您的私人厨房</p>
-            <button id="p-action-btn" class="w-full py-4 bg-emerald-600 text-white rounded-2xl font-black
+            <button id="p-action-btn" class="w-full py-4 bg-emerald-600 text-white rounded-2xl font-black shadow-xl hover:scale-[1.02] active:scale-[0.98] transition-all">登录 / 注册</button>
+        </div>
+    </main>
+
+    <nav class="fixed bottom-6 left-1/2 -translate-x-1/2 bg-slate-900/90 backdrop-blur-lg px-8 py-4 rounded-full flex items-center gap-10 z-40 shadow-[0_20px_50px_rgba(0,0,0,0.3)] border border-white/10">
+        <button id="nav-home" class="text-2xl hover:scale-120 transition-transform">🏠</button>
+        <button id="nav-moment" class="text-2xl hover:scale-120 transition-transform">📸</button>
+        <button id="nav-post" class="bg-emerald-500 text-white w-14 h-14 rounded-full flex items-center justify-center shadow-lg active:scale-90 transition-all border-4 border-slate-900">
+            <span class="text-3xl font-bold">+</span>
+        </button>
+        <button id="nav-profile" class="text-2xl hover:scale-120 transition-transform">👤</button>
+    </nav>
+
+    <div id="modal-auth" class="fixed inset-0 modal-overlay hidden z-50 flex items-center justify-center p-6">
+        <div class="bg-white w-full max-w-sm rounded-[32px] p-8 shadow-2xl">
+            <h2 id="auth-title" class="text-2xl font-black mb-6 text-center text-slate-800">欢迎回来</h2>
+            <input id="auth-user" type="text" placeholder="你的名字">
+            <input id="auth-pwd" type="password" placeholder="密码 (至少6位)">
+            <button id="auth-submit" class="w-full py-4 bg-emerald-600 text-white rounded-2xl font-black shadow-lg">确认</button>
+            <button id="auth-toggle" class="w-full mt-4 text-xs text-slate-400 underline text-center block">切换登录/注册</button>
+            <button onclick="hideModal('modal-auth')" class="w-full mt-4 text-xs text-slate-300">取消</button>
+        </div>
+    </div>
+
+    <div id="modal-post" class="fixed inset-0 modal-overlay hidden z-50 flex items-center justify-center p-6">
+        <div class="bg-white w-full max-w-md rounded-[32px] p-8 shadow-2xl">
+            <h2 class="text-xl font-black mb-6 text-emerald-600">分享新鲜事</h2>
+            <select id="post-type">
+                <option value="recipe">🥘 发布到菜谱区</option>
+                <option value="moment">📸 发布到瞬间区</option>
+            </select>
+            <input id="post-title" type="text" placeholder="给它起个好名字">
+            <textarea id="post-notes" placeholder="分享你的烹饪心得..." class="h-32 resize-none"></textarea>
+            <div class="bg-slate-50 p-4 rounded-2xl border-2 border-dashed border-slate-200 mb-6">
+                <input id="post-file" type="file" accept="image/*" class="mb-0 bg-transparent border-none p-0 text-xs">
+            </div>
+            <div class="flex gap-4">
+                <button onclick="hideModal('modal-post')" class="flex-1 py-4 text-slate-400 font-bold">取消</button>
+                <button id="post-submit" class="flex-1 py-4 bg-emerald-600 text-white rounded-2xl font-black shadow-lg">立即发布</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="modal-detail" class="fixed inset-0 modal-overlay hidden z-50 flex items-center justify-center p-4">
+        <div class="bg-white w-full max-w-lg rounded-[32px] overflow-hidden shadow-2xl max-h-[85vh] flex flex-col">
+            <div class="relative w-full aspect-video bg-slate-100">
+                <img id="detail-img" class="w-full h-full object-cover">
+                <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+                <h2 id="detail-title" class="absolute bottom-6 left-8 text-2xl font-black text-white"></h2>
+            </div>
+            <div class="p-8 overflow-y-auto">
+                <p id="detail-author" class="text-xs text-emerald-600 mb-4 font-bold uppercase tracking-widest"></p>
+                <div id="detail-notes" class="text-slate-500 leading-relaxed text-sm whitespace-pre-wrap border-t border-slate-100 pt-6"></div>
+                <button onclick="hideModal('modal-detail')" class="w-full mt-8 py-4 bg-slate-50 text-slate-400 rounded-2xl font-bold hover:bg-slate-100 transition-colors">收起详情</button>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // 1. 配置 (保持你的 Key 不变)
+        const CONF = {
+            url: "https://kmsbrisiajtykflnskpj.supabase.co",
+            key: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imttc2JyaXNpYWp0eWtmbG5za3BqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzIwODM2NzIsImV4cCI6MjA4NzY1OTY3Mn0.e8-qaJpmrGVc_GcWVEBHEUHWWiJ40Ax5BMyWTZsGqbE"
+        };
+        const _client = supabase.createClient(CONF.url, CONF.key);
+        let currentUser = null, isSignUp = false, allData = [];
+
+        // 2. 状态监听器
+        _client.auth.onAuthStateChange((_, session) => {
+            currentUser = session?.user || null;
+            updateUI();
+            fetchData();
+        });
+
+        // 3. 数据拉取
+        async function fetchData() {
+            const { data, error } = await _client.from('recipes').select('*').order('created_at', { ascending: false });
+            if (error) { console.error(error); return; }
+            allData = data || [];
+            renderContent();
+        }
+
+        // 4. 内容渲染
+        function renderContent() {
+            // 菜谱区
+            const recipes = allData.filter(i => !i.type || i.type === 'recipe');
+            document.getElementById('recipe-list').innerHTML = recipes.map(i => `
+                <div class="recipe-card" onclick="showDetail('${i.id}')">
+                    ${(currentUser && i.created_by === currentUser.id) ? `<div class="delete-btn" onclick="handleDelete(event, '${i.id}')">🗑️</div>` : ''}
+                    <div class="flex-1 min-w-0">
+                        <h3 class="font-black text-lg mb-1 truncate text-slate-800">${i.title}</h3>
+                        <p class="text-xs text-slate-400 line-clamp-2">${i.notes || '这家伙很懒，没写心得'}</p>
+                        <p class="text-[10px] text-emerald-500 mt-3 font-bold uppercase tracking-wider">BY @${i.author || '匿名'}</p>
+                    </div>
+                    <img src="${i.image_url}" class="recipe-thumb bg-slate-50 shadow-inner">
+                </div>
+            `).join('') || '<div class="text-center py-20 text-slate-300 italic">空空如也，快去发布吧</div>';
+
+            // 瞬间区
+            const moments = allData.filter(i => i.type === 'moment');
+            document.getElementById('moment-grid').innerHTML = moments.map(i => `
+                <div class="relative rounded-[24px] overflow-hidden aspect-[3/4] bg-slate-100 shadow-md group" onclick="showDetail('${i.id}')">
+                    ${(currentUser && i.created_by === currentUser.id) ? `<div class="delete-btn" onclick="handleDelete(event, '${i.id}')">🗑️</div>` : ''}
+                    <img src="${i.image_url}" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                    <div class="absolute inset-x-0 bottom-0 p-4 bg-gradient-to-t from-black/50 to-transparent">
+                        <p class="text-white text-[10px] font-bold">@${i.author}</p>
+                    </div>
+                </div>
+            `).join('') || '<div class="col-span-2 text-center py-20 text-slate-300 italic">暂无美图</div>';
+        }
+
+        // 5. 发布功能
+        async function handlePost() {
+            const t = document.getElementById('post-title').value.trim();
+            const f = document.getElementById('post-file').files[0];
+            const type = document.getElementById('post-type').value;
+            const n = document.getElementById('post-notes').value.trim();
+
+            if (!t || !f) return alert("标题和照片必填哦！");
+            const btn = document.getElementById('post-submit');
+            btn.innerText = "飞往云端..."; btn.disabled = true;
+
+            try {
+                const ext = f.name.split('.').pop();
+                const path = `public/${Date.now()}_${Math.random().toString(36).slice(-4)}.${ext}`;
+                const { error: upErr } = await _client.storage.from('recipe-images').upload(path, f);
+                if (upErr) throw upErr;
+
+                const { data: urlObj } = _client.storage.from('recipe-images').getPublicUrl(path);
+                
+                // 重点：如果 type 字段依然报错，尝试先不传 type
+                const postData = {
+                    title: t, notes: n, type: type,
+                    image_url: urlObj.publicUrl,
+                    author: currentUser.email.split('@')[0],
+                    created_by: currentUser.id
+                };
+
+                const { error: dbErr } = await _client.from('recipes').insert([postData]);
+                if (dbErr) throw dbErr;
+
+                hideModal('modal-post');
+                fetchData();
+                alert("发布成功！✨");
+            } catch (e) { alert("发布失败: " + e.message); }
+            finally { btn.innerText = "立即发布"; btn.disabled = false; }
+        }
+
+        // 6. 基础逻辑
+        async function handleDelete(e, id) {
+            e.stopPropagation();
+            if (!confirm("确定要删除这条记忆吗？")) return;
+            try {
+                const { error } = await _client.from('recipes').delete().eq('id', id);
+                if (error) throw error;
+                fetchData();
+            } catch (err) { alert("删除失败: " + err.message); }
+        }
+
+        window.showDetail = (id) => {
+            const item = allData.find(i => i.id == id);
+            if (!item) return;
+            document.getElementById('detail-img').src = item.image_url;
+            document.getElementById('detail-title').innerText = item.title;
+            document.getElementById('detail-notes').innerText = item.notes || '美味记录...';
+            document.getElementById('detail-author').innerText = 'Cooked by @' + (item.author || '匿名');
+            showModal('modal-detail');
+        };
+
+        function updateUI() {
+            const hBtn = document.getElementById('header-auth-btn');
+            const pName = document.getElementById('p-name'), pEmail = document.getElementById('p-email'), pBtn = document.getElementById('p-action-btn'), pAvatar = document.getElementById('p-avatar');
+            if (currentUser) {
+                const name = currentUser.email.split('@')[0];
+                hBtn.innerText = `退出 (${name})`; hBtn.onclick = () => _client.auth.signOut();
+                pName.innerText = name; pEmail.innerText = currentUser.email; pBtn.innerText = "退出登录";
+                pBtn.onclick = () => _client.auth.signOut(); pAvatar.innerText = name[0].toUpperCase();
+            } else {
+                hBtn.innerText = "登录/注册"; hBtn.onclick = () => showModal('modal-auth');
+                pName.innerText = "游客厨师"; pEmail.innerText = "分享您的第一道菜"; pBtn.innerText = "登录 / 注册";
+                pBtn.onclick = () => showModal('modal-auth'); pAvatar.innerText = "👤";
+            }
+        }
+
+        async function handleAuth() {
+            const u = document.getElementById('auth-user').value.trim();
+            const p = document.getElementById('auth-pwd').value.trim();
+            if (!u || p.length < 6) return alert("名字必填，密码至少6位");
+            const email = `${encodeURIComponent(u)}@rose.com`;
+            try {
+                const { error } = isSignUp ? await _client.auth.signUp({ email, password: p }) : await _client.auth.signInWithPassword({ email, password: p });
+                if (error) throw error;
+                hideModal('modal-auth');
+            } catch (e) { alert("验证失败: " + e.message); }
+        }
+
+        function switchView(v) { ['view-home', 'view-moment', 'view-profile'].forEach(id => document.getElementById(id).classList.toggle('hidden', id !== `view-${v}`)); }
+        function showModal(id) { document.getElementById(id).classList.remove('hidden'); }
+        function hideModal(id) { document.getElementById(id).classList.add('hidden'); }
+
+        document.getElementById('nav-home').onclick = () => switchView('home');
+        document.getElementById('nav-moment').onclick = () => switchView('moment');
+        document.getElementById('nav-profile').onclick = () => switchView('profile');
+        document.getElementById('nav-post').onclick = () => currentUser ? showModal('modal-post') : showModal('modal-auth');
+        document.getElementById('auth-submit').onclick = handleAuth;
+        document.getElementById('post-submit').onclick = handlePost;
+        document.getElementById('auth-toggle').onclick = () => {
+            isSignUp = !isSignUp;
+            document.getElementById('auth-title').innerText = isSignUp ? "加入我们" : "欢迎回来";
+        };
+    </script>
+</body>
+</html>
